# rpi_os_bare_metal

./: .gitignore  CMakeLists.txt  README.md
OS/: Makefile  README.md  app.c  app.d  app.h  build.sh  entry.d  gpio.d  interrupt.d  irq.d  kernel8.elf  kernel8.img  led.d  mini_uart.d  mm.d  printf.d  scheduler.d  start.d  tim.d  timer.d  utils.d  utils.h
OS/kernel/: entry.S  scheduler.c  scheduler.h  start.S
OS/modules/: base.h
OS/modules/boot/: boot.h
OS/modules/gpio/: gpio.c  gpio.h
OS/modules/interrupt/: interrupt.c  interrupt.h
OS/modules/led/: led.c  led.h
OS/modules/mini_uart/: mini_uart.c  mini_uart.h
OS/modules/systimer/: systimer.c  systimer.h
OS/modules/timer/: timer.c
os_bare_metal/: CMakeLists.txt
os_bare_metal/headers/: rpi_aux.h  rpi_base.h  rpi_gpio.h
os_bare_metal/src/: aux.c  gpio  gpio.c
os_bare_metal/tests/: CMakeLists.txt  test_aux.c  test_gpio.c
